Format chapter 1 of willpower

--- a/willpower/chapter10.tex
+++ b/willpower/chapter10.tex
@@ -46,7 +46,7 @@
 
 Нават памылкі могуць быць дараваныя пры высокім капітале даверу. Але калі вы камунікуеце непаважліва, злоўжываеце даверам, не даяце чалавеку выказвацца, ігнаруеце ці раздражняецеся, то ваш эмацыйны рахунак растае. Пры нізкім узроўні даверу да вашых словаў і прапановаў ставяцца насьцярожана і падазрона, што абцяжарвае камунікацыю і разбурае яе. Гэта можа адбывацца як між мужам і жонкай, так і ўнутры кампаніі.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Вы~--- тыповы прадстаўнік вашага атачэньня ці не?
 
@@ -81,7 +81,7 @@
 
 Ясная рэч, ня варта кідацца ў~скрайнасьці і лічыць любую адзіноту шкоднай. У гэтым разьдзеле гаворка ідзе менавіта пра змушаную самоту. Дасьледаваньні паказваюць, што людзі з~больш высокім IQ менш маюць патрэбу ў~сябрах і атрымліваюць задавальненьне ад жыцьця. Па сутнасьці, быць аднаму, жыць аднаму і быць адзінокім~--- гэта розныя рэчы, якія па-рознаму ўплываюць на здароўе.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ацаніце вашыя сацыяльныя сувязі якасна і колькасна. Ці дастаткова іх вам?
 
@@ -114,7 +114,7 @@
 
 Узровень даходу. Ваш сярэдні даход роўны сярэдняму арыфмэтычнаму даходу найбольш значных для вас людзей у~вашым асяродзьдзі. Калі вы ў~сярэдняй траціне вашых сяброў па даходзе, то ваша імавернасьць больш зарабляць у~бліжэйшыя гады высокая, а~калі вы ў~верхняй траціне~--- то шанцы падняць свой даход памяншаюцца ў~шмат разоў. Забясьпечаныя сябры аўтаматычна стымулююць вас зарабляць больш, пры гэтым лепей каб яны былі багацейшымі за вас, скажам, ня ў~тысячу, а~ў два разы.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Як уплывае на вашае здароўе ізаляцыя?
 
@@ -175,7 +175,7 @@
 
 Карысна для падтрыманьня сацыяльных сувязей і вывучэньне сваёй сямейнай гісторыі. Глыбокае веданьне вашага радаводу шчыльна зьвязанае з~маштабам вашага мысьленьня: вы ацэньваеце свае рашэньні яшчэ й з~пункту гледжаньня ўплыву на жыцьцё вашых нашчадкаў. Улічваючы даныя эпігенэтыкі, гэта можа працаваць на некалькі пакаленьняў наперад. Вывучэньне сямейнай гісторыі карэлюе з~унутраным локусам кантролю, больш высокай самаацэнкай, лепшай атмасфэрай у~сям'і, лепшай згуртаванасьцю, меншым узроўнем турботы, меншай частасьцю паводзінных разладаў, больш эфэктыўным пераадоленьнем стрэсаў. Імаверна, глыбокая рэтраспэктыва дапамагае больш думаць і пра сваю будучыню, бо за ўспаміны і за канструяваньне будучыні адказваюць адныя і тыя ж участкі мозгу.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Складзіце сьпіс людзей, якіх вы ведаеце. З кім зь іх варта ўмацаваць сувязь?
 
@@ -216,7 +216,7 @@
 
 Гэта можна выкарыстоўваць, каб мяняць звычкі і працаваць у~камандзе ў~цеснай сувязі, напрыклад, наняць сабе куратара. Так худнеюць Weight Watchers і дапамагаюць адно аднаму ананімныя алькаголікі. А пад кіраўніцтвам трэнэра людзі выкладваюцца нашмат мацней, чым калі займаюцца ў~адзіноце. Можна паспрабаваць працаваць у~пастаянным відэакантакце з~камандай на працягу ўсяго працоўнага дня. А можна і пад наглядам незнаёмца, як прапануе, напрыклад, сэрвіс Focusmate.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці часта вы капіюеце звычкі іншых людзей?
 
@@ -285,7 +285,7 @@
 
 Самы вялікі падарунак на сьвяты і ня толькі, які мы можам зрабіць сваім блізкім,~--- гэта чыстая ўвага і суперажываньне, што немагчыма без глядзельнага кантакту. Адкладзіце тэлефоны і часьцей глядзіце на каханых, адказвайце на зьвернутыя на вас позіркі, фармуйце станоўчыя аксытацынавыя сувязі.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці заўсёды навакольныя дакладна разумеюць вашыя эмоцыі? Ці добра вы ўлоўліваеце сацыяльны кантэкст?
 
@@ -336,7 +336,7 @@
 
 Сапраўдная супэрсіла~--- гэта калі вы пачалі бегаць або запусьцілі новы праект, і нікому не сказалі. Няхай за вас гавораць справы, а~ня словы. Будзьце самі сабе настаўнікамі: хваліце сябе за працу, за прагрэс. Няхай у~вас будзе шмат асабістых таямніц, пра якія навакольныя ня ведаюць. 
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Наколькі добра вы разумееце межы іншых людзей?
 
@@ -397,7 +397,7 @@
 
 Асабістая адказнасьць~--- гэта цяжкі груз, але адначасова і надзейны падмурак. У канчатковым выніку, ад сьляпога падпарадкаваньня ў~сьвеце больш жахаў і сьмерцяў, чым ад бунтаў. Вучыцеся рабіць правільна, выхоўвайце пачуцьцё асабістай свабоды, і, як напісаў Антон Паўлавіч Чэхаў, «гэты малады чалавек выціскае зь сябе па кроплях раба і як ён, прачнуўшыся адной цудоўнай раніцай, адчувае, што ў~яго жылах цячэ ўжо ня рабская кроў, а~сапраўдная чалавечая».
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці атрымліваеце вы задавальненьне ад прыналежнасьці да нейкай сацыяльнай групы?
 
@@ -422,7 +422,7 @@
 
 Сацыяльны імунітэт. Якому сацыяльнаму ўзьдзеяньню вы можаце пасьпяхова супрацьстаяць, а~што ня ў~сілах перамагчы? Прааналізуйце ваша атачэньне. У каго з~вашых блізкіх звычкі ці рысы, якіх вы хочаце пазбавіцца? У каго зь іх звычкі ці рысы, якія вы хочаце займець? Каго вы капіюеце? Ад каго вы ``заразіліся'' сваімі звычкамі? Чый эмацыянальны, інтэлектуальны ўплыў варта выключыць, паменшыць, павялічыць? Як вы ўплываеце на іншых? Які ў~вас прынцып адбору атачэньня? Якімі якасьцямі вы б хацелі, каб валодалі вашыя сябры і знаёмыя? Апішыце сваё ``ідэальнае атачэньне''. Якіх сяброў і якога ўплыву вам бракуе?
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Знайдзіце сабе аднадумцаў у~вашым праекце.
 
