--- a/willpower/chapter11.tex
+++ b/willpower/chapter11.tex
@@ -18,7 +18,7 @@
 
 Многія людзі зьвяртаюцца да розных спосабаў ``дэтаксікацыі'', але, па сутнасьці, самы надзейны спосаб паменшыць таксічную нагрузку~--- гэта зьнізіць трапленьне шкодных рэчываў у~арганізм, то бок палепшыць асяродзьдзе, у~якім мы жывём. Наша мэта~--- навучыцца ў~любым месцы выяўляць шкодныя чыньнікі асяродзьдзя і ліквідаваць іх, плюс папоўніваць брак карысных чыньнікаў у~сваім асяродзьдзі для фармаваньня аптымальных умоваў.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ацаніце бясьпеку навакольнага асяродзьдзя ў~месцы, дзе вы жывяце.
 
@@ -51,7 +51,7 @@
 
 Асабліва адчувальныя да бруднага паветра дзеці, цяжарныя, старыя, людзі з~хранічнымі захворваньнямі. Часьціцы сажы могуць патрапіць нават у~пляцэнту~--- так, забруджваньне павялічвае рызыку заганаў разьвіцьця, выклікае затрымку росту і зьніжэньне аб'ёму мозгу ў~дзяцей, пагаршэньне іх псыхічнага здароўя, уключаючы рызыку дзіцячых дэпрэсій. У розных дасьледаваньнях бруднае паветра павялічвае рызыку аўтызму ад 12 да 76\,\%. Дасьледаваньні на жывёлах пацьвярджаюць, што пражываньне паблізу ажыўленых трасаў шкодзіць мозгу нашчадкаш яшчэ на раньніх стадыях разьвіцьця, павялічваючы ўзровень нэўразапаленьня.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Як мяняецца ваша самаадчуваньне пры доўгім знаходжаньні ва ўмовах забруджанага паветра?
 
@@ -92,7 +92,7 @@
 
 Зььвярніце ўвагу, што з~цягам часу эфэктыўнасьць фільтраў зьмяншаецца, і іх важна мяняць. Калі вы жывяце ў~прыватным доме, то вялікая колькасьць дрэваў і кустоўя могуць захопліваць часьціцы і зьніжаць іх канцэнтрацыю ў~паветры.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ацаніце якасьць паветра дома і на вуліцы, выкарыстоўваючы грамадскія сыстэмы назіраньня або ўсталяваўшы ўласныя датчыкі. Таксама вы можаце далучыць праз інтэрнэт свой датчык да глябальнага анляйн-маніторынгу якасьці паветра, каб зрабіць гэтую інфармацыю даступнай для ўсіх.
 
@@ -123,7 +123,7 @@
 
 Па меры павелічэньня эфэктыўнасьці прытоку паветра ў~хаце важна зрабіць: прытокавыя клапаны пасіўныя, затым прытокавая прымусовая вэнтыляцыя з~ачысткай паветра, прытокавая-выцяжная вэнтыляцыя з~СО2-датчыкам, якая падтрымлівае дакладны ўзровень СО2 у~залежнасьці ад колькасьці людзей у~памяшканьні і дазваляе эканоміць электрычнасьць і цеплыню, калі ў~пакоі нікога няма. Для эканоміі цяпла ёсьць адмысловыя сыстэмы рэкупэрацыі. Вядома, такія сыстэмы дарагія, палепшыць сытуацыю дапамагаюць і простыя пасіўныя прытокавыя клапаны і прачыстка вэнтыляцыйных шахт, усталёўка ў~іх прымусовай выцяжкі. Зьніжэньне ўзроўню СО2 зьніжае колькасьць лятучых арганічных злучэньняў, фармальдэгіду, колькасьць бактэрыяў і грыбкоў у~паветры.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Вымерайце ўзровень вуглякіслага газу дома ў~дзённы і вячэрні час.
 
@@ -160,7 +160,7 @@
 
 Гукі ўплываюць на нас і больш тонкімі мэханізмамі, мяняючы наша ўспрыманьне рэальнасьці. Напрыклад, француская музыка ў~краме павялічвае імавернасьць таго, што вы купіце францускае віно. Гучная музыка аслабляе ўспрыманьне салодкага і салёнага, што можа правакаваць пераяданьне. Таму важна есьці пад прыемную і нягучную музыку. Часьцей слухайце любімыя песьні і мэлёдыі~--- гэта выдатная антыстрэсавая мэтодыка.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Вымерайце ўзровень шуму на працы і дома. Ці перавышае ён норму?
 
@@ -199,7 +199,7 @@
 
 Дасьледаваньні пацьвярджаюць, што дзьве гадзіны поўнай цішыні могуць стымуляваць нэўрагенэз у~гіпакампе і палепшыць кагнітыўныя здольнасьці. Пэрыядычна рабіце «ціхі час» у~офісе~--- устрыманьне ад размоваў і перапіскі~--- гэта дапаможа павысіць прадуктыўнасьць. Дадайце ў~свой дзень моманты цішыні між працай і сустрэчамі, бо, як слушна заўважыў Барыс Пастарнак, ``цішыня~--- ты найлепшае з~таго, што я чуў''.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці адчуваеце вы ўзьдзеяньне акустычнага стрэсу?
 
@@ -236,7 +236,7 @@
 
 Здаровы дом~--- гэта прытулак, схоўня, месца, дзе мы можам адпачываць і аднаўляць свае сілы ў~аптымальным для гэтага мікраатачэньні.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці лічыце вы свой дом бясьпечным для здароўя?
 
@@ -283,7 +283,7 @@
 
 Выкарыстоўвайце фільтры. Акрамя НЕРА-фільтраў, якія забясьпечваюць высокаэфэктыўнае затрыманьне часьціц, ёсьць фотакаталітычныя, газаачышчальныя, электрастатычныя, ультрафіялетавыя і іншыя тыпы фільтраў. Некаторыя вытворцы камбінуюць розныя прынцыпы ачысткі ў~адным прыборы. Эфэктыўнасьць працы фільтра трэба правяраць датчыкамі якасьці паветра.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Як часта і якім чынам вы ладзіце прыборку?
 
@@ -320,7 +320,7 @@
 
 Падчас сну мы не ляжым нерухома ўвесь час, а~пэрыядычна рухаемся. Большасьць сынтэтычных вырабаў лёгка электрызуюцца, насычаючыся электрастатычнымі зарадамі, пры гэтым яны іх слаба расьсейваюць. Гэта вядзе да назапашваньня зараду на целе, што можа адмоўна ўплываць на наша самаадчуваньне. Акрамя гэтага, зарады пэрыядычна разраджаюцца, што парушае наш сон. Выбірайце пасьцельную бялізну з~натуральнае тканіны, якая не назапашвае лішні зарад; таксама сытуацыю паляпшае хаджэньне басанож увечары і водныя працэдуры.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці шмат дратоў пад напругай і тэхнікі ля вашай галавы, калі вы сьпіце?
 
@@ -350,7 +350,7 @@
 
 Як кантраляваць вільготнасьць. Каб вымераць вільготнасьць у~памяшканьні, скарыстайцеся адмысловым прыборам, які называецца гідрамэтар. Як правіла, датчык убудоўваецца ва ўвільгатняльнікі, у~вас можа быць некалькі датчыкаў у~розных памяшканьнях для паасобнага кантролю. Ёсьць спэцыяльныя асушальнікі паветра, ёсьць ультрагукавыя ўвільгатняльнікі паветра, і можна лёгка падтрымліваць неабходны ўзровень вільготнасьці ў~доме. Дасьледаваньні паказваюць, што павелічэньне вільготнасьці да 40\,\% здымае сымптомы раздражненьня. Оптымум вільготнасьці 40--60\,\%, занадта высокая вільготнасьць непажаданая, бо можа выклікаць шэраг іншых праблемаў. Выкарыстаньне буфэрных дыхальных матэрыялаў, накшталт мінімальна апрацаванага дрэва ці гіпсавых канструкцый, дазваляе ім убіраць лішак вільгаці з~паветра і затым, пры высыханьні, аддаваць.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Які ўзровень вільготнасьці ў~вас у~памяшканьні?
 
@@ -381,7 +381,7 @@
 
 Сярод цяжкіх мэталаў прыярытэтнымі забруджвальнікамі лічацца волава, кадмій, цынк~--- галоўным чынам таму, што тэхнагеннае іх назапашваньне ў~навакольным асяродзідзі ідзе высокімі тэмпамі. Многія баяцца ртуці, дакладней мэтылртуці, якая зьяўляецца небясьпечным таксінам. Яе шмат у~некаторых морапрадуктах, у~глебах прамысловых рэгіёнаў, некаторых фарбавальніках. Таму лепш купляць рыбу невялікіх памераў (не пасьпяваюць назапасіць шмат ртуці) і з~тых відаў, якія не знаходзяцца на вяршыні харчовага ланцуга. А вось марскі акунь, рыба-меч, каралеўскі тунец, акула могуць утрымліваць багата ртуці.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Якія сынтэтычныя вырабы ў~вас дома можна замяніць на натуральныя? Што са старых рэчаў можна выкінуць ці вывезці з~дому?
 
@@ -406,7 +406,7 @@
 
 Святлодызайн. Найлепшае сьвятло~--- дзённае. Таму аптымальна часьцей быць на вуліцы, абыходзіцца мінімумам штораў, цюляў, фіранак, аб'ёмных расьлінаў, якія засланяюць плынь сьвятла. Чым большыя вокны~--- тым лепш. Можна працаваць ці выходзіць на гаўбец, дах, тэрасу. Часам выкарыстоўваюць сьвятлаводы, каб накіраваць сонечнае сьвятло ўглыб будынкаў. Для лепшага сьвятла ў~памяшканьні часта выкарыстоўваюць камбінацыю розных крыніцаў сьвятла, удома таксама мае сэнс выкарыстоўваць як дзённае, так і вечаровае (ніжняе, зь лямпамі напальваньня) сьвятло. Можна яшчэ выкарыстоўваць для лепшай асьветленасьці і дызайн. Так, у~мяне ў~кватэры~--- белыя сьцены і столь, белая падлога з~глянцавай фарбай. Белыя і гладкія паверхні маюць большы каэфіцыент адлюстраваньня сьвятла, чым цёмныя і шурпатыя. І не выпадкова скандынаўскі дызайн узьнік для таго, каб кампэнсаваць недахоп сьвятла.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Вымерайце з~дапамогай праграмы асьветленасьць у~пакоі, на вашым працоўным стале. Ці стае вам сьвятла? Калі не~--- павялічце яркасьць у~сябе дома.
 
