--- a/willpower/chapter12.tex
+++ b/willpower/chapter12.tex
@@ -20,7 +20,7 @@
 
 У адным з~дасьледаваньняў было паказана, што ультрафіялет зьніжае атлусьценьне і прыкметы мэтабалічнага сындрому незалежна ад вітаміну D. У экспэрымэнце працяглае субэрытэмнае апраменьваньне ультрафіялетам прыводзіла да зьніжэньня вагі, паляпшэньня глюкозаталерантнасьці, павышэньня адчувальнасьці да інсуліну, зьмяншэньня прыкметаў тлушчавага гепатозу печані, зьніжэньня узроўняў нашчавага інсуліну, глюкозы і халестэрыну. Аўтары падкрэсьліваюць, што большасьць станоўчых эфэктаў сьвятла не аднаўлялася дадаткамі вітаміну D.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці любіце вы бываць на сонцы?
 
@@ -71,7 +71,7 @@
 
 Рэтынальны дафамінавы шлях. Сонечнае сьвятло павышае ўзровень дафаміну ў~мозгу~--- гэта зьвязана з~шэрагам дафамінавых эфэктаў, ад павышэньня ўзроўню энэргіі да паляпшэньня адчувальнасьці да інсуліну. Памятайце пра тое, што паўсюдна насіць сонцаахоўныя акуляры~--- гэта не заўсёды здаровы выбар! Рэч у~тым, што ў~сятчатцы вока ёсьць асаблівая рэтынальная дафамінавая сыстэма, зьвязаная з~мозгам. Таму сонца напрамую можа павысіць вам дафамін. А абараніць сятчатку ад ультрафіялету вы можаце харчовым спосабам: сятчатка мае патрэбу ў~высокіх канцэнтрацыях лютэіну, зэаксантыну і Амэга-3.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці лепш вы сьпіце, калі правялі больш часу на адкрытым паветры?
 
@@ -116,7 +116,7 @@
 
 Фотасэнсібілізатары ўваходзяць і ў~склад некаторых расьлінаў, напрыклад сьвятаяньніка: у~ім утрымліваюцца гіпэрыцын і псэўдагіпэрыцын, якія могуць выпрацоўваць актыўныя формы кіслароду ў~прысутнасьці сонца. Таму сьвятаяньнік, асабліва ў~фотаадчувальных людзей, можа выклікаць сонечныя апёкі.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці бледная ў~вас скура? Дадайце больш гародніны ў~свой рацыён!
 
@@ -163,7 +163,7 @@
 
 Разьяднальныя бялкі ёсьць ня толькі ў~бурым і бэжавым тлушчы, іх шмат у~печані, у~цягліцах, сэрцы і ў~іншых тканках. Холад, фізычная актыўнасьць, пэўны рэжым харчаваньня і прадукты~--- безь перакусаў і без высокавугляводаў ежы~--- павялічваюць колькасьць разьяднальных бялкоў. Навуковец Джон Спікмэн высунуў ідэю, што колькасьць разьяднальных бялкоў, якія зьніжаюць утварэньне актыўных формаў кіслароду, грае ключавую ролю ў~падаўжэньні жыцьця. Гэтая тэорыя таксама носіць назву ``разьяднай і выжывай'' (Uncoupling-to-Survive) і вястуе, што чым вышэй хуткасьць мэтабалізму і чым больш разьяднальных бялкоў, тым лепшая праца мітахондрый і большая працягласьць жыцьця.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Як вы пераносіце холад і цяпло?
 
@@ -214,7 +214,7 @@
 
 Саўны і гарачыя ванны паляпшаюць кантроль глюкозы ў~крыві і нават зьмяншаюць колькасьць тлушчу, яны могуць быць карысныя для людзей з~цукроўкаю 2-га тыпу. Але яшчэ яны могуць нэгатыўна паўплываць на фэртыльнасьць мужчынаў (роўна як і занадта цёплая ніжняя бялізна, вузкія штаны, звычка трымаць ноўтбук на нагах і т. п.), бо павелічэньне тэмпэратуры ў~вобласьці машонкі парушае спэрматагенэз. Зрэшты, гэты ўплыў зварачальны.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Сьпіце ў~прахалодзе.
 
@@ -259,7 +259,7 @@
 
 Бутырат падтрымлівае здароўе кішачніка: стымулюе абнаўленьне клетак сьлізістай, зьяўляецца для іх крыніцай энэргіі, стымулюе крывацёк і ўтварэньне сьлізістай, дае мноства іншых дабратворных эфэктаў, ад паляпшэньня працы мозгу да зьніжэньня запаленьня, рэгулюе актыўнасьць шэрагу генаў і можа падаўжаць жыцьцё. Бутырат таксама ўзмацняе нэўрагенэз у~мозгу, зьніжае верагоднасьць дэмэнцыі, паляпшае адчувальнасьць да інсуліну і дапамагае схуднець. Да бутырат-прадукавальных бактэрыяў адносяцца ў~асноўным роды Clostridium, Eubacterium і Butyrivibrio.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці ёсьць у~вас праблемы са страваваньнем?
 
@@ -316,7 +316,7 @@
 
 Выкарыстоўваецца і перасадка мікрафлёры здаровае похвы, а~таксама ёсьць іншыя экспэрымэнтальныя спосабы. Напрыклад, пры кесаравым сячэньні абціраньне народжаных дзяцей тампонамі, уведзенымі ў~похву маці, паскарае іх засяленьне карыснымі штамамі Lactobacillus і Bacteroides. А біёляг Роберт Дан прапануе засяляць дамы карыснымі мікробамі, ствараць паверхні для размнажэньня дабратворных бактэрыяў.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Пазьбягайце залішняга прымяненьня дэзінфэктантаў, антыбактэрыяльных мыйных сродкаў і да т.~п.
 
@@ -343,7 +343,7 @@
 
 Спакойней стаўцеся да лёгкіх дзіцячых хваробаў. Бо перахварэўшы, дзіця часта становіцца ўстойлівейшым да шматлікіх хваробаў. Наведваньне гурткоў, садоў, зносіны з~аднагодкамі карысна для ўзбагачэньня мікрафлёры. На працягу першых гадоў жыцьця імунная сыстэма дзіцяці праходзіць тонкую настройку, праграмуючыся пад узьдзеяньнем разнастайных антыгенаў. І калі нагрузка на імунную сыстэму недастатковая, то пажыцьцёва захоўваецца рызыка гіпэрактыўнасьці і хранічнага запаленьня, што прыкметна павышае рызыку алергічных, аўтаімунных захворваньняў і нават раку. У сем'ях, дзе ў~першыя пяць гадоў жыцьця былі хатнія жывёлы, колькасьць дзяцей-алергікаў аказалася рэзка зьніжаная. Такім чынам, здаровае бактэрыяльнае асяродзьдзе ўключае ў~сябе строгія меры па абароне ад шкоднасных інфэкцыяў і павелічэньне магчымасьцяў для кантакту з~карыснымі.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Часьцей бывайце на прыродзе.
 
@@ -386,7 +386,7 @@
 
 Калі дадаць зеляніны, больш розных архітэктурных дэталяў, калярыстыкі і да т.~п. можна паменшыць агрэсію архітэктурнага асяродзьдзя. Прырода зьяўляецца ідэальным прыкладам камфортнага асяродзьдзя: лес, горы, аблокі~--- усё падпарадкоўваецца адзіным законам эстэтыкі. Акрамя задавальненьня, такое асяродзьдзе аптымальнае для нашай нэрвовай сыстэмы.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Выбірайце для шпацыраў самыя прыгожыя маршруты.
 
@@ -431,7 +431,7 @@
 
 Прадумайце магчымасьць харчовай разнастайнасьці, каштуйце новыя смакі, прадукты. Паспрабуйце розныя віды актыўнасьці, асвойце новыя рухальныя навыкі~--- танец або катаньне на роліках. Пашырце сфэру сваіх знаёмстваў, зьезьдзіце ў~новае месца, вазьміцеся за рашэньне нязвыклай задачы. Заўважана, што ідэі ўзьнікаюць у~пэўных колах, а~не паасобку. Дзе ўзбагачанае асяродзьдзе для вашых мэтаў?
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Дзе ля вас ёсьць асяродзьдзе, якое адпавядае вызначэньню ўзбагачанага асяродзьдзя?
 
