--- a/willpower/chapter3.tex
+++ b/willpower/chapter3.tex
@@ -64,7 +64,7 @@
 
 Пазьнейшы час пачатку захворваньняў, захаваньне кагнітыўных здольнасьцяў да глыбокай старасьці, высокая працягласьць жыцьця~--- гэта станоўчыя прыкметы, бо супэрдоўгажыхары, як правіла, маюць важны ўклад у~генэтыку.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Якія паказьнікі вы штодня вымяраеце?
 
@@ -183,7 +183,7 @@
 
 Многія гены дазваляюць ацаніць нашу рэакцыю на розныя прадукты і лекавыя прэпараты: напрыклад, у~каго кафэін выклікае трывожнасьць або артэрыяльную гіпэртэнзію, у~каго вышэйшая рызыка пабочных эфэктаў пры ўжываньні пэўных прэпаратаў, для каго гэтыя лекі будуць асабліва эфэктыўныя ці неэфэктыўныя. Можна ацаніць свае спартовыя здольнасьці (напрыклад, маратонец вы ці спрынтар), даведацца пра ўнікальныя характарыстыкі, пачынаючы ад успрыманьня пахаў і смакаў да вызначэньня хранатыпу (сава ці жаўрук). Выбар жа пэўнай дыеты ці віяду спорту паводле зьвестак тэсту пакуль не атрымаў дастатковай колькасьці навуковых пацьверджаньняў.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці робіце вы штогадовае абсьледаваньне?
 
@@ -234,7 +234,7 @@
 
 У стрэсавых умовах вельмі карысна любое актыўнае дзеяньне, нават імпульсіўнае~--- а~пры стрэсе мы звычайна дзейнічаем імпульсіўна. Гэта павялічвае адаптыўнасьць, памяншае імавернасьць фармаваньня вывучанай бездапаможнасьці, павялічвае ўпэўненасьць, дапамагае ўкараняць і падтрымліваць звычку ў~новых умовах, у~новым кантэксьце.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Якая асаблівасьць вашага ладу жыцьця, на ваш погляд, мацней за ўсё кароціць яго? Што вы можаце з~гэтым зрабіць?
 
@@ -291,7 +291,7 @@
 
 Для паляпшэньня якасьці сну важна паляпшаць яго ўмовы, а~не трывожыцца праз тое, што сон не прыходзіць. Адпусьціце кантроль, выкарыстоўвайце парадоксы~--- напрыклад, імкніцеся «не заснуць», дазвольце жыцьцю ісьці лёгка і спантанна, гэта карысна для здароўя. Але не сьпяшайцеся выкідаць трэкеры: хочацца верыць, што неўзабаве мы атрымаем праграмны big data, якія змогуць адзьдзяляць сыгнал ад шуму, калібравацца пад пэўнага чалавека і ня красьці яго ўвагу неістотнай інфармацыяй. Ідзіце сярэдзінным шляхам~--- і гэта будзе сапраўды гарманічнае разьвіцьцё асобы.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці схільныя вы да скрайнасьцяў? Выпішыце такія сытуацыі. Як часта гэта шкодзіла вашаму здароўю?
 
@@ -321,7 +321,7 @@
 
 Модныя практыкі могуць патрабаваць шмат сілаў і ўвагі, і ўсё гэта будзе амаль бессэнсоўна, калі базавыя рэсурсы здароўя не даведзеныя да ладу.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Нешта моднае, нешта вечнае. Згадайце, якімі «моднымі» аздараўленчымі мэтодыкамі вы займаліся? Ці апраўдалі яны чаканьні?
 
@@ -374,7 +374,7 @@
 
 Калі хочуць «падмануць прыроду» і «атрымаць фігуру» хутка, часта ўжываюць стэроідныя гармоны: гэта дае прыкметны вынік без усіх умоваў. Чалавек можа нарошчваць цягліцы, не асабліва строга выконваючы рэжым і нават менш трэніруючыся. Але заплаціць за такое неэвалюцыйнае ўмяшаньне давядзецца вялікую цану: зьніжэньне выпрацоўкі ўласнага тэстастэрону, атрафія яечкаў, павелічэньне ўзроўню эстрагенаў, бясплодзьдзе, павелічэньне ціску, паражэньне печані, паскарэньне разьвіцьця атэрасклерозу і рызыка сардэчна-сасудзістых захворваньняў, памяншэньне таўшчыні кары мозгу, павелічэньне рызыкі дэпрэсіі, канцэнтрацыі ўвагі, агрэсіўнасьці і да т.~п. Зразумела, нічога агульнага са здароўем гэта ня мае. А яшчэ многія «імітуюць» цягліцы, зьвяртаючыся да ін'екцый прэпаратаў, што візуальна іх павялічваюць, або да плястычных апэрацыяў. Напампоўвайце цягліцы, а~ня Эга!
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Калі перад вамі стаіць мэта палепшыць нейкі паказьнік, то разглядайце ня толькі мэдыкамэнтозныя мэтады, але й мэтады зьмены ладу жыцьця. Іх камбінацыя часта вельмі эфэктыўная.
 
@@ -413,7 +413,7 @@
 
 Падумайце, зь якімі праблемамі са здароўем вы часьцей за ўсё сутыкаецеся і што можна зрабіць, каб перадухіліць іх? Дзе вашае слабое зьвяно? Напрыклад, пры стрэсе ў~адных людзей павышаецца рызыка бессані, у~другіх~--- пераяданьня, у~трэціх~--- павышаецца спажываньне алькаголю. Ведаючы свае слабыя месцы, вы можаце загадзя прыняць захады, каб не дапусьціць зрыву ў~выпадку крытычнай сытуацыі.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Складзіце сьпіс вашых слабых месцаў (фізычных, псыхалягічных, сацыяльных, біяхімічных) і спосабаў іх умацаваньня. Разьмяркуйце іх у~парадку зьніжэньня прыярытэту па ступені ўплыву на вашае здароўе.
 
@@ -462,7 +462,7 @@
 
 А вось мужчыны часьцей сутыкаюцца з~павышаным фэрытынам. Лішак жалеза павялічвае рызыку шматлікіх захворваньняў, у~гэтым выпадку паказана донарства, а~калі ён пачне проста піць дадаткі жалеза, гэта пагоршыць яго стан. Проста піць такія дадаткі без высьвятленьня прычынаў няварта, бо хранічная анэмія ў~пажылых можа быць і праз крывацёкі, абумоўленыя ракам кішачніка, а~можа быць і праз інфэкцыю.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці разьлічваеце вы рызыкі (як бліжэйшыя, так і аддаленыя) і перавагі пры выкарыстаньні лекавых прэпаратаў або плянаваньні апэрацыяў?
 
@@ -491,7 +491,7 @@
 
 «Калі гэта не адназначнае так, то гэта адназначнае не». Што да працы і вашага здароўя, правіла «не рабі» дакладнейшае і карысьнейшае, чым правіла «рабі». Мы ведаем пра тое, што няслушна і шкодна, нашмат больш, чым пра тое, што слушна і карысна. Тое, што было ўчора і сёньня няслушным і шкодным, малаверагодна стане слушным і карысным заўтра. А вось наконт карыснага сёньня~--- ня факт! Пакідайце лішняе, вызваляйце працоўную памяць, матывацыю і запал да новых справаў і ўчынкаў. Не дадавайце лішняга. Вам можа быць шкада вашых старых шкодных звычак, дзейнічайце бязьлітасна і рашуча, як яшчарка, якая адкідае хвост. Вырашайце праблемы замест іх абмеркаваньня і пакідайце іх у~мінулым. Адсякайце лішняе, дзейнічайце рашуча ў~вырашэньні сваіх праблемаў здароўя. Няхай вашай прымаўкай стане хірургічная «Ubi pus, ibi incisio»~--- дзе гной, там разрэз! Ня думайце аб тым, як упускаць у~сваё жыцьцё сотню справаў, думайце, як адмаўляцца і рашуча гаварыць «не» новаму і бліскучаму. Толькі так вы зможаце дасягнуць фокусу і ўвагі. Менш~--- гэта больш. Менш~--- гэта здаравей.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Што можна выкінуць з~галавы, каб стала лягчэй? Які цяжар чаканьняў і крыўдаў вы штодня носіце з~сабой?
 
@@ -530,7 +530,7 @@
 
 Харчовыя паводзіны~--- гэта набор звычак, аўтаматычных рэакцый, якія парадкуюць наша харчаваньне ў~доўгатэрміновай пэрспэктыве. Так, вы можаце зьесьці колькі хочаце, але, выбіраючы ежу нізкай спэцыфічнай калярыйнасьці і сілкуючыся два разы на дзень, даволі складана атрымаць залішнюю вагу, нават калі вельмі імкнуцца. Але самае галоўнае ў~гэтай справе~--- шматгадовы ўстойлівы трэнд здаровай вагі, падтрымаць які могуць толькі звычкі, а~не вясновыя наскокі на абмежавальныя дыеты. Усе нашыя даволі бедныя рэсурсы ўсьвядомленасьці варта вытрачаць не на падлік калёрыяў, а~на выпрацоўку новых звычак. 50\,\% здароўя~--- гэта здаровыя звычкі.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Як вы можаце ўкараніць здаровыя звычкі ў~свой рэжым жыцьця, працу і адпачынак? Як вы можаце спалучаць адразу некалькі здаровых звычак?
 
@@ -559,7 +559,7 @@
 
 Існуе і мэтабалічная памяць. Калі вы доўгі час дрэнна харчаваліся, а~затым перайшлі на здаровае харчаваньне, то арганізм яшчэ доўга будзе «ўсё памятаць». У адным з~дасьледаваньняў лячэньня цукроўкі высьветлілі, што нэгатыўная «мэтабалічная памяць» не памяншала рызыку мікрасасудзістых ускладненьняў пры запушчаным да гэтага дыябэце~--- нават пасьля некалькіх гадоў строгага кантролю глюкозы. Але мэтабалізм не злапомны, у~яго ёсьць і пазітыўная памяць~--- калі строгі кантроль ўзроўню цукру на працягу некалькіх гадоў абараняў ад пабочных эфэктаў пры парушэньнях харчаваньня.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Як перапынкі ў~фізычнай актыўнасьці адбіваюцца на вашай трывушчасьці?
 
@@ -592,7 +592,7 @@
 
 Такім чынам, здароўе патрабуе сыстэмнага падыходу з~улікам усіх яго рэсурсаў. Розныя сыстэмы арганізма аказваюць адна на адну множны ўплыў, і аптымальны вынік будзе дасягнуты толькі пры комплексным рашэньні праблемаў.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Якія нечаканыя ўзаемасувязі паміж рознымі аспэктамі здароўя вы заўважалі ў~сабе?
 
@@ -625,7 +625,7 @@
 
 З узростам зьніжаецца здольнасьць цяглічных клетак сасудаў расслабляцца, іх калянасьць узмацняецца. Гэта вядзе да павышэньня артэрыяльнага ціску. Мацнейшы ўдар току крыві ў~сьценку сасуда прыводзіць да таго, што яе клеткі сынтэзуюць яшчэ больш трывалага калагену і менш расьцяжнога элястыну, што яшчэ мацней зьніжае яе расьцягнутасьць і можа зноў правакаваць павелічэньне ціску. Такім чынам, заганныя колы могуць працяглы час падтрымліваць шкодныя паводзіны і стымуляваць разьвіцьцё хваробаў. Важна выяўляць такія мэханізмы і актыўна іх разрываць, бо самі яны ня зьнікнуць. Няма сэнсу чакаць «матывацыі» нешта рабіць.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Прааналізуйце свае шкодныя звычкі і рэакцыі. Ці бачыце вы заганнае кола? Як яго разарваць?
 
