--- a/willpower/chapter5.tex
+++ b/willpower/chapter5.tex
@@ -26,7 +26,7 @@
 
 Напрыклад, нават пры ракавых захворваньнях сілавыя трэніроўкі дазваляюць як захаваць, так і павялічыць цяглічную масу, лягчэй пераносіць хіміятэрапію, палепшыць зыходы. Раней лекары забаранялі рухацца і пасьля праблемаў з~сэрцам, і пры расьсеянным склерозе. Цяпер жа даведзена, што раньняя рухальная рэабілітацыя дапамагае пры хваробах сэрца, а~пры расьсеянным склерозе нават запавольвае разьвіцьцё хваробы.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Наколькі энэргічным вы выглядаеце і пачуваецеся?
 
@@ -98,7 +98,7 @@
 
 Такое спалучэньне сілавых і аэробных трэніровак, дастатковы час хадзьбы і скарачэньне часу сядзеньня на крэсьле працуе лепш за ўсё. Дасьледаваньні паказалі, што злучэньне некалькіх тыпаў мацней паляпшае фізычную працаздольнасьць, чым даўжэйшыя заняткі адным відам спорту.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Як мяняецца ваша самаадчуваньне, калі вы рухаецеся шмат? А калі седзіце ўвесь дзень?
 
@@ -139,7 +139,7 @@
 
 Ужо шмат гадоў у~мяне стаіць падстаўка пад унітазам, вядомая як Squatty Potty, навуковая назва~--- прылада для пастуральнай мадыфікацыі дэфэкацыі (defecation postural modification devices or DPMDs). Дасьледаваньні паказваюць, што выкарыстаньне такіх падставак дапамагае ня толькі людзям з~запорамі, але паляпшае дэфэкацыю і ў~здаровых людзей, дапамагае пры праблемах з~мочаспусканьнем у~жанчынаў, у~т.л. і пры цяжарнасьці, пры сындроме раздражнёнага кішачніка, гемароі. Вядома, падстаўка ня вырашыць усіх праблемаў з~запорамі, але дапаможа прыкметна зьменшыць рызыкі ад нефізіялягічнага сядзеньня.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Колькі гадзінаў на дзень вы седзіце?
 
@@ -166,7 +166,7 @@
 
 Дарога на працу. Дасьледаваньні паказваюць, што занадта доўгая дарога на працу, заторы зьяўляюцца сур'ёзнымі пагрозамі для здароўя. Чым даўжэй вы едзеце на працу, тым вышэйшая рызыка атлусьценьня і мэтабалічных парушэньняў (глюкоза, ліпідны профіль і да т.~п.). Гараджане, якія ходзяць на працу пешшу і жывуць каля працы, маюць і больш здаровую масу цела. Працягласьць дарогі на працу звыш 30 міляў зьвязаная з~павелічэньнем сьмяротнасьці. Заторы~--- гэта бізун нашага часу. Напрыклад, толькі Лондан Сіці штодня губляе за кошт затораў мільён фунтаў, а~агульныя выдаткі часу, паліва і да т.~п. складаюць у~ЗША больш за сотню мільярдаў даляраў за год. Мы так ня любім заторы, ажно гатовыя ахвяраваць 5 хвілінамі вольнага часу, каб на хвіліну менш стаяць у~заторы. Не сядзіце ў~грамадскім транспарце, па магчымасьці дабірайцеся на працу актыўна, пешшу або на ровары, паркуйцеся ці выходзьце з~мэтро трошкі раней, каб прайсьці крыху пешшу.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Колькі крокаў за дзень вы праходзіце? Палічыце з~дапамогай смартфона. Паспрабуйце розныя віды хадзьбы.
 
@@ -221,7 +221,7 @@
 
 Трэйлранінг (trail running), альбо бег па мяккіх паверхнях, уцягвае ў~работу і ўмацоўвае больш цягліцаў ног і корпуса, чым бег па асфальце, а~таксама зьмяншае нагрузку на зьвязкі і косткі. Бег па прамой цыклічны, а~бег па прыродным маршруце не ўтрымлівае аднолькавых участкаў. Калі мы манатонна бяжым па асфальце, кожны крок падобны на папярэдні, і мы прызямляемся ступаком абсалютна аднолькава, гэта выклікае перагрузку і павялічвае рызыку траўмы. Пры бегу на прыродзе мы ставім нагу кожны раз крыху па-іншаму, і гэта раўнамерней разьмяркоўвае ўдарную нагрузку: даведзена, што бег па траве зьмяншае нагрузку на ступні на 17\,\% у~параўнаньні зь бегам па асфальце. Апроч фізычнае карысьці, такі бег патрабуе нашмат больш увагі, цалкам паглынае ваш розум, падтрымлівае засяроджанасьць. Так, трэба ўвесь час зьмяняць даўжыню кроку, пралічваць рухі на 5--6 крокаў наперад~--- і гэта дазваляе выдатна перазагружацца. Акрамя таго, больш разнастайнасьці і візуальнага задавальненьня заўсёды карысна для настрою і для здароўя.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці любіце вы бегаць?
 
@@ -260,7 +260,7 @@
 
 Аднатыпная праграма трэніроўкі, асабліва хатняй, стамляе. Вы можаце лёгка разнастаіць кожнае з~практыкаваньняў. Адціскацца можна, паставіўшы рукі на стосы кніг ці ногі~--- на ўзвышэньне, або нават на адной руцэ. А можна ўзяць гумовы джгут і адціскацца, заціснуўшы яго рукамі. Прысядаць можна дзясяткамі розных спосабаў, ад нажніцаў да прысяданьня на адной назе. Плянак існуе вялікая разнастайнасьць відаў~--- выбірайце і чаргуйце. Падтрымлівайце разнастайнасьць сваіх трэніровак, выбіраючы практыкаваньні, якія вам падабаюцца ці лепш пасую па біямэханіцы.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Купіце дадому гантэлі і гіру з~магчымасьцю рэгуляваньня.
 
@@ -285,7 +285,7 @@
 
 Дасьледаваньне паказала, што нават невялікія ўсплёскі фізычнай актыўнасьці прыкметна ўплываюць на мэтабалізм. Паддосьледныя зь сядзячым ладам жыцьця круцілі пэдалі пяць разоў па 45 сэкундаў (160 сэкундаў сумарна за дзень) на працягу трох дзён. Пасьля прыёму ежы ўзровень тлушчаў у~крыві быў на 30\,\% ніжэйшы, чым да гэтага. Таму нават самая невялікая актыўнасьць лепшая, чым яе адсутнасьць. Адна хвіліна спрынту з~інтэрваламі ў~20 сэкундаў (тры разы па 20) тры разы на тыдзень на працягу трох месяцаў прыводзіла да паляпшэньня паказьнікаў сардэчна-сасудзістай сыстэмы і мэтабалізму.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Няма часу на трэніроўку? Знайдзіце чатыры хвіліны для табаты.
 
@@ -318,7 +318,7 @@
 
 Танцаваць можна дома, падчас гатаваньня ці ўборкі, і ў~дУшы, і ў~душЫ. Нават такі сур'ёзны таварыш, як Ніцшэ, пісаў: «Дзень прайшоў дарма, калі я не танцаваў». Танец мае наймагутнейшы антыстрэсавы эфэкт, і ўсё чалавецтва з~самых старажытных часоў танцавала і цешылася. Любую праблему на сьвеце можна вырашыць танцуючы!
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Пры якой фізычнай актыўнасьці вы можаце яшчэ і актыўна камунікаваць зь сябрамі?
 
@@ -367,7 +367,7 @@
 
 Напрыклад, стандартная рэкамэндацыя ў~150 хвілінаў аэробных сярэднеінтэнсіўных практыкаваньняў (вышэй за 3 MET) або 75 хвілінаў бегу эквівалентная 450 MET-хвілінаў або 7,5 МЕТ-гадзінаў на тыдзень. Такая актыўнасьць памяншае сьмяротнасьць на 20\,\% у~параўнаньні з~тымі, хто ўвогуле не займаецца. Аднак аптымальная актыўнасьць будзе вышэйшай, пачынаючы з~900 МЕТ-хвілінаў або 15 МЕТ-гадзінаў да 20 МЕТ-гадзінаў. Так, жанчыны з~актыўнасьцю 21 MET гадзіна на тыдзень маюць рызыку раку грудзей у~2 разы менш, чым 2 МЕТ-гадзіны. Трэніруючыся з~інтэнсіўнасьцю паміж 22--75 MET, мы можам зьнізіць рызыку сьмерці на 40\,\%, а~вось большыя лічбы ўжо зьвязаныя з~павышэньнем рызыкі. Выкарыстоўваючы табліцы МЕТ значэньняў, вы можаце ацаніць свой тыднёвы ўзровень актыўнасьці.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці адсочваеце вы свой прагрэс у~трэніроўках? Вядзеньне дзёньніка трэніровак дапаможа вам паскорыць свой прагрэс.
 
@@ -392,7 +392,7 @@
 
 Плянуйце свой трэніровачны графік, пазьбягаючы як ператрэніраванасьці, так і занадта рэдкіх заняткаў.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ад чаго залежаць вашыя мэты ў~фізычнай актыўнасьці? Які вы бачыце сваю ідэальную форму?
 
@@ -417,7 +417,7 @@
 
 Саркапэнія~--- важны чыньнік рызыкі іншых хваробаў: астэапароз, дыябэт, сардэчна-сасудзістыя і іншыя захворваньні. Трэніроўкі зьніжаюць узровень запаленчых цытакінаў, нармалізуюць ціск, павышаюць адчувальнасьць да інсуліну, паляпшаюць гарманальны профіль, дапамагаюць падтрымліваць здароўе костак. Менавіта сілавыя трэніроўкі зьяўляюцца самым эфэктыўным відам фізычнае трэніроўкі для лячэньня саркапэніі. Іншыя віды актыўнасьці, такія як бег, хоць і павялічваюць цяглічную масу, але павольней і ў~меншым аб'ёме.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Да якога паверха вы падымаецца бяз дыхавіцы?
 
@@ -460,7 +460,7 @@
 
 Тэсты на скачкі. Павесьце мерную стужку на сьцяну, адмераўшы два мэтры ад падлогі. Зафіксуйце кропку, да якой вы дацягваецеся рукой. Затым скокніце ў~вышыню, імкнучыся дасягнуць найболей высокай кропкі, выніковы вынік лічыцца як розьніца паміж кропкамі. Паспрабуйце некалькі разоў, абярыце лепшы вынік: норма~--- 40--50 см, выдатны вынік~--- больш за паўмэтра. Скачкі ў~даўжыню: сагніце ногі ў~каленях і скокніце наперад, дапамагаючы сабе махам рукамі. Норма~--- больш за 2 м 10 см, выдатны вынік~--- звыш 2 м 40 см.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Які ў~вас ахоп біцэпса?
 
@@ -495,7 +495,7 @@
 
 Вымераць ViO2max дакладней за ўсё можна ў~лябараторыі. Менш дакладныя значэньні дае фітнэс-бранзалет. Вы можаце самі вымераць ViO2max у~тэсьце Купера. Для гэтага вам трэба прабегчы максімальна магчымую адлегласьць па роўнай мясцовасьці (стадыён зь вядомай акружнасьцю) за 12 хвілінаў. Унясіце адлегласьць, якую вы змаглі прабегчы, у~мэтрах. Разьлік па формуле: VO2max = (D12--504, 9) / 44,73.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Якія вашыя вынікі ў~артастатычнай пробе?
 
