--- a/willpower/chapter7.tex
+++ b/willpower/chapter7.tex
@@ -76,7 +76,7 @@
 
 Зрабіць зь лімонаў ліманад. Мне падабаецца мэтафара з~гештальт-тэрапіі: стрэс~--- гэта ежа. Чым гастрэйшыя вашыя зубы і мацнейшыя сківіцы, тым мацнейшы стрэс вы можаце ня проста перажаваць, але й засвоіць ягоныя карысныя ўласьцівасьці. Любыя падзеі як ежа~--- ці зможаце вы іх перастрававаць? Слушна заўважалі стоікі: «Нашыя дзеяньні могуць сутыкацца зь перашкодамі, але для нашых намераў ці плянаў перашкодаў не існуе. Бо мы здольныя падладжвацца і прыстасоўвацца. Сьвядомасьць прыстасоўваецца і абяртае на сваю карысьць перашкоду, якая стала на шляху нашых дзеяньняў. Перашкода на шляху дзеяньня спрыяе дзеяньню. Тое, што стаіць на шляху, становіцца шляхам». Марк Аўрэлій, 170 год н.э.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці гатовыя вы адхапіць «свой кавалак» ад жыцьця, адаптаваўшыся да новых умоваў? Ці вы лічыце, што мусіць зьмяніцца сам сьвет?
 
@@ -151,7 +151,7 @@
 
 Варыябэльнасьць сардэчнага рытму можна вымяраць з~дапамогаю бранзалета, датчыка, тэлефона, вымяраюцца шмат паказьнікаў, напрыклад SDNN, RMSSD, pNN50. Чым вышэй варыябэльнасьць пульсу, тым лепш. Разьлічваюцца і вытворныя: хвалі з~высокай частатой HF паказваюць актыўнасьць парасімпатыйнай сыстэмы, а~зь нізкай LF~--- сімпатыйнай. Калі мала HF, то брак расслабленьне, калі мала LF~--- то нізкі тонус. Суадносіны LF / HF характарызуе вэгетатыўны балянс.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Як хутка вы вяртаецеся ў~норму пасьля перажытага стрэсу? (Чым хутчэй, тым лепш.)
 
@@ -200,7 +200,7 @@
 
 Базавая нармалізацыя ладу жыцьця таксама вельмі важная. Напрыклад, гіпадынамія зьніжае энэргічнасьць, а~гармон голаду грэлін, наадварот, павялічвае і ўзровень дафаміну, і энэргічнасьць. Ясная рэч, бяз добрага сну тут не абысьціся.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Як часта вы намаганьнем прымушаеце сябе нешта рабіць?
 
@@ -287,7 +287,7 @@
 
 Пераўтваральны адпачынак супроць спажывальнага. Адпачынак, калі мы проста пасіўна спажываем нешта, не такі эфэктыўны, як пераўтваральны адпачынак. Напрыклад, нават мэдыя можа валодаць эфэктам катарсісу, стымулюючы нас прарабіць унутраную працу. Творчасьць стымулюе ствараць новае, зьмяняць існае. Мы ня проста вяртаемся да сябе ранейшых, а~ўзьнімаемся вышэй над сабой.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Якія самыя раньнія прыкметы стомы вы ў~сабе заўважаеце?
 
@@ -332,7 +332,7 @@
 
 Як ні парадаксальна, але высьветлілася, што работнікі атамных станцый маюць у~два разы меншую рызыку раку. З тэрапэўтычнымі мэтамі выкарыстоўваюцца радонавыя ванны. Некаторыя злучэньні ў~прадуктах харчаваньня, такія як поліфэнолы, таксама стымулююць гармэзіс~--- і гэта ўжо будзе фітанутрыентны стрэс: напрыклад, кафэін у~расьлінах працуе як яд для абароны ад казюрак, але гэты аб'ём «яду» ўзьдзейнічае на чалавека падбадзёрліва. Або сілімарын~--- рэчыва ў~пладах растаропшы~--- уплывае на печань чалавека і зьяўляецца гепатапратэктарам.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. У якіх выпадках стрэс і нагрузка надаюць вам сілы і натхняюць?
 
@@ -395,7 +395,7 @@
 
 Дадатковыя чыньнікі стрэсаўстойлівасьці ўключаюць давер і шчаснае сацыяльнае асяродзьдзе, каапэрацыю з~іншымі людзьмі і, як ні парадаксальна, пэўнае самаўзвышэньне: лічыцца, што прымаць свае абмежаваньні карысна, але часам завышаная самаацэнка і нерэалістычныя перадузятасьці адносна сябе спрыяюць дабрабыту і павышаюць устойлівасьць перад стрэсам.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці ўмееце вы зрабіць паўзу перад рэакцыяй на стрэсар?
 
@@ -454,7 +454,7 @@
 
 Яркая мэтафара стрэсаўстойлівасьці~--- гэта неваляшка (ванька-ўстанька). Як бы вы яе ні адхілялі, як бы ні кідалі, яна хутка вяртаецца ў~зыходны стан. Японская неваляшка дарума лічыцца сымбалем непахіснасьці імкненьняў яе ўладальніка. Бо ня так важна, што выбіла вас зь сядла, важна, як хутка вы ўзьберацеся назад. Калі парушаецца гамэастаз, то чым меншае адхіленьне і чым хутчэй сыстэма вяртаецца ў~норму, тым яна мацнейшая і тым лепш працуюць мэханізмы рэгуляцыі. Як хутка вы вяртаецеся ў~норму пасьля стрэсу?
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Дайце нырца ў~жыцьцё: у~якіх падзеях, што адбываюцца поруч з~вамі, вы не прымаеце ўдзелу? Паспрабуйце гэта зрабіць і актыўна паўплываць нават на лякальным узроўні.
 
@@ -525,7 +525,7 @@
 
 Сачыненьне, маляваньне, ігра на інструмэнтах~--- усё працуе выдатна, нават калі ў~вас ``пасрэдны'' ўзровень. Таму, калі адчуваеце стрэс, займіцеся творчасьцю ці выявіце спантаннасьць любым са спосабаў. Дастаткова 45 хвілінаў творчасьці, каб прыкметна зьнізіць узровень картызолу. Нам зь дзецьмі цяпер лепш за ўсё пасуе драма~--- экспрэсіўнае разыгрываньне роляў і сюжэтаў, ад коцікаў да трансформэраў.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Патрэніруйцеся аптымістычна рэагаваць на сытуацыі, як удалыя, так і няўдалыя. Спытайце сябе, што б падумаў аптыміст, ацэньваючы пастаянства, унівэрсальнасьць, пэрсаналізацыю праблемы.
 
@@ -594,7 +594,7 @@
 
 Завядзіце сабаку. Наяўнасьць хатніх жывёлаў мае куды больш дадатных, чым адмоўных аспэктаў. Мы можам казаць нават пра PAT, або Реts As Therapy, дзе фэлінатэрапія~--- лячэньне коткамі, а~каністатэрапія~--- лячэньне сабакамі. Сацыяльнае ўзьдзеяньне зьвязанае з~тым, што хатнія жывёлы стымулююць камунікацыю, клопат, цялесныя кантакты, і гэта станоўча ўплывае на стрэсаўстойлівасьць. Так, рызыка інфаркту ва ўладальнікаў катоў на 30\,\% меншая, чым у~тых, хто жыве бяз хатніх жывёл. Сабакі таксама станоўча ўплываюць як на зьніжэньне рызыкі сардэчна-сасудзістых захворваньняў, так і на артэрыяльны ціск і нават на ліпідны профіль крыві. Дастаткова некалькіх хвілінаў камунікацыі паміж гаспадаром і сабакам для зьніжэньня ўзроўню картызолу~--- і ў~сабакі, дарэчы, таксама.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Схадзіце на масаж.
 
