--- a/willpower/chapter9.tex
+++ b/willpower/chapter9.tex
@@ -22,7 +22,7 @@
 
 Кампанэнты статусу зьвязаныя адзін з~адным і актывуюць адзін аднаго. Так, цяпер структура стройнага і падцягнутага цела зьяўляецца адным з~ключавых паказьнікаў сацыяльнага статусу чалавека. Успрыманьне статуту адбываецца на падкорцы, літаральна ў~першыя сэкунды знаёмства, а~ад ацэнкі статуту залежыць і камунікацыя, і разьмеркаваньне рэсурсаў. Мы жывём у~час багацьця рэсурсаў і магчымасьцяў. Нам ня трэба малаціцца зь іншымі людзьмі за драбкі ежы, выракаючы іх на голад. У сьвеце ёсьць мільёны нішаў, дзе мы можам быць пасьпяховымі. Мы можам канкураваць і самі з~сабой~--- становячыся лепшымі за сябе ўчорашніх, кідаючы выклік самому часу.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Як вы ставіцеся да публічных выступаў? Ацаніце ступень сваёй харызмы.
 
@@ -57,7 +57,7 @@
 
 Бэты займаюць прамежкавае становішча. У іх адсутнічаюць дакладныя правілы і мэты, як у~альфаў, але яны імітуюць іх, спрабуючы прэтэндаваць на ролю лідэраў. Бэты імкнуцца забясьпечыць сабе камфорт праз пазітыўнае асяродзьдзе, стварэньне ілюзіі лідэра празь сьвіту, адзеньне і да т.~п. Яны пазьбягаюць адказнасьці і перакладаюць працу на іншых людзей, пры гэтым забіраючы рэсурсы групы. Як і амэгі, бэты ў~першую чаргу думаюць аб тым, як спадабацца іншым і ўразіць іх.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ці ацэньваеце вы самі розныя ідэі, рэчы і людзей ці імкняцеся спачатку даведацца чужое меркаваньне?
 
@@ -96,7 +96,7 @@
 
 Ацэнка біялягічнага ўзросту ў~блізьнятаў паказала, што няўдалая ў~жыцьці сястра-блізьня на 7 і больш гадоў была біялягічна старэйшая за сваю пасьпяховую сястру. Сярод актораў Галівуду даўжэй жывуць уладальнікі Оскара~--- у~сярэднім на 3 гады. Усяго толькі 4 гады беднасьці на працягу жыцьця ўжо прыводзяць да заўчаснага старэньня, што праяўляецца ў~горшых паказьніках тэстаў на трывушчасьць.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Ня зайздрасьць, а~натхненьне. Хто зь людзей з~высокім статутам вас натхняе? Як яны яго дамагліся?
 
@@ -151,7 +151,7 @@
 
 Як слушна кажуць, «улада разбэшчвае, а~абсалютная ўлада разбэшчвае абсалютна». У багатых людзей зь цягам часу таксама выяўляецца дэфармацыя асобы: чым багацейшы чалавек, тым больш ён схільны хлусіць і парушаць закон, браць і даваць хабары і ўхваляць неэтычныя паводзіны. Больш высокі статус павялічвае схільнасьць да рызыкі, у~тым ліку ня толькі ў~новых праектах, але й у~агрэсіі да навакольных, і нават рызыкі неабароненага сэксу.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Зь якім гераічным пэрсанажам вы сябе асацыюеце? Чаму?
 
@@ -188,7 +188,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 
 Як мы бачым, самарэгуляцыя і тут выступае важным чыньнікам. Такім чынам, пры наяўнасьці падтрымкі і актыўнай пазыцыі нават магутны стрэс не выклікае вывучанай бездапаможнасьці і не зьяўляецца прысудам. Але толькі траціна дзяцей здольная яго пераадолець~--- і тое адно пры выпадковых удалых абставінах.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Колькі вы зарабляеце? Ці дастаткова вам гэтага? Колькі вы хочаце зарабляць?
 
@@ -215,7 +215,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 
 Сацыяльная мабільнасьць~--- павышэньне статусу і пераход у~іншую клясу~--- таксама залежыць ад інтэлекту і ўзроўню адукацыі. Таму невыпадкова навучаньне заўсёды лічылася спосабам ``выбіцца ў~людзі''. Навучаньне ў~прэстыжным унівэрсытэце ня толькі ўплывае на разьвіцьцё здольнасьцяў і навыкаў, але й карыснае ў~пляне дабратворнага сацыяльнага асяродзьдзя і высокіх чаканьняў навакольных.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Якая ў~вас адукацыя? Ці вучыліся вы дзе-небудзь за апошні год?
 
@@ -262,7 +262,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 
 Запішыцеся на фотасэсію і навучыцеся, што трэба рабіць, каб добра атрымлівацца на здымках і выглядаць гэтак жа ў~рэальным жыцьці. Якая менавіта ўсьмешка пасуе вам лепш за ўсё? Як сесьці, каб сьвятло падкрэсьлівала вашыя найлепшыя рысы? Як прыгожа ўставаць, як трымаць рукі і ногі? Мэта~--- стварыць сабе набор якасных партрэтаў, дзе вы вельмі сабе й іншым падабаецеся. Раздрукуйце такія фота, зрабіце зь іх альбом і трымайце каля сябе.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Паспрабуйце розныя выразы твару. Якія вам пасуюць болей? А які ў~вас паўсядзённы выраз твару?
 
@@ -309,7 +309,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 
 Старажытныя лічылі бляск у~вачах мерай унутранай энэргіі, ``сьвятлом жыцьця''. Сапраўды, вочы могуць быць ``разумнымі'' ці ``дурнымі'', бо іх рухі адлюстроўваюць ход мысьленьня чалавека. Варта ня толькі ўважліва слухаць суразмоўцу, а~яшчэ глядзець у~ягоныя вочы. Вочы, як і цела, нясуць мноства важнай невэрбальнай інфармацыі, якую практычна немагчыма падрабіць. Заўважайце, як мяняецца позірк суразмоўцы на розных тэмах, як вочы ажыўляюцца на цікавым і страчваюць бляск на нудным. Бо чым больш значнае нешта для нас, тым больш мы гэта заўважаем. Дафамін адказвае за значнасьць, а~значнасьць кіруе нашай увагай.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Прывыкайце трымаць позірк і галаву вышэй.
 
@@ -400,7 +400,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 
 Сіла~--- гэта валоданьне рэсурсамі і магчымасьцямі і гатоўнасьць іх ужываць. Упэўненасьць у~сабе, бачаньне будучыні і трансьляцыя яго навакольным, натхненьне, сьмеласьць і рашучасьць, упэўненасьць у~сабе паказваюць вашу сілу. Ваш статус, адзеньне, званьне~--- усё гэта ўплывае на ўспрыманьне сілы, але невэрбаліка, мабыць, галоўны яе кампанэнт. Цялесны, псыхалягічны дыскамфорт зьмяншаюць вашу прывабнасьць. Пазьбягайце хапатлівых рухаў, лішніх гэстаў, частых кіўкоў галавой, шматслоўя, нецярплівасьці, хваляваньня, словаў-паразітаў. Нэрвознасьць забівае харызму: спакой і стрыманасьць, паўзы ў~маўленьні, плястычныя рухі ўспрымаюцца як паказьнік сілы і статуту.
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. Наколькі вы ўважлівыя да суразмоўцы? Выявіце максімум засяроджанасьці на ім.
 
@@ -471,7 +471,7 @@ Soft skills. У такіх абставінах выйгрышным будзе 
 
 Падумайце, у~якіх сфэрах жыцьця вы хочаце рабіць гэтыя рэчы, ці робіце вы іх натуральна, адчуваеце ў~працэсе задавальненьне і здавальненьне, лёгка вучыцеся, дзейнічаеце неардынарна і эфэктыўна нават пад ціскам?
 
-\subsubsection{Пытаньні і заданьні}
+\subsection*{Пытаньні і заданьні}
 
 1. У чым сэнс вашага жыцьця, на ваш погляд?
 
