--- a/willpower/intro.tex
+++ b/willpower/intro.tex
@@ -6,12 +6,12 @@
 
 Мы ўсе ведаем, што карысна, а~што шкодна. Але чаму тады мы рэгулярна робім нешта разбуральнае для сябе? Навукоўцы й філёзафы мінулых гадоў казалі пра інстынкт да жыцьця ды інстынкт да сьмерці~--- іх балянс і вызначае траекторыю нашага лёсу. Кожны з~нас мае волю (прагу) да жыцьця, жаданьне быць мацнейшым і здаравейшым.
 
-\tipbox{Ляўрэат Нобэлеўскай прэміі, навуковец Ільля Мечнікаў выкарыстоўваў тэрмін «інстынкт жыцьця», яго ўжываў і фізыёляг Іван Паўлаў: «Усё жыцьцё ёсьць зьдзяйсьненьне адной мэты, а~менавіта ахоўваньня самога жыцьця, нястомная праца таго, што завецца агульным інстынктам жыцьця. Гэты агульны інстынкт, ці рэфлекс жыцьця, складаецца з~масы асобных рэфлексаў. Большую частку гэтых рэфлексаў уяўляюць сабой станоўча-рухальныя рэфлексы, г.~зн. рух да спрыяльных для жыцьця ўмоваў, рэфлексы, якія маюць на мэце захапіць, засвоіць гэтыя ўмовы для дадзенага арганізму».}
+\emph{Ляўрэат Нобэлеўскай прэміі, навуковец Ільля Мечнікаў выкарыстоўваў тэрмін «інстынкт жыцьця», яго ўжываў і фізыёляг Іван Паўлаў: «Усё жыцьцё ёсьць зьдзяйсьненьне адной мэты, а~менавіта ахоўваньня самога жыцьця, нястомная праца таго, што завецца агульным інстынктам жыцьця. Гэты агульны інстынкт, ці рэфлекс жыцьця, складаецца з~масы асобных рэфлексаў. Большую частку гэтых рэфлексаў уяўляюць сабой станоўча-рухальныя рэфлексы, г.~зн. рух да спрыяльных для жыцьця ўмоваў, рэфлексы, якія маюць на мэце захапіць, засвоіць гэтыя ўмовы для дадзенага арганізму».}
 
 Кожны з~нас на ўзроўні інстынктаў імкнецца выжыць. Наша цела хоча быць здаровым, нашы цягліцы хочуць быць моцнымі, наш розум прагне быць вострым~--- і гэта цалкам натуральныя памкненьні. Страта ж волі да жыцьця, сэнсу і мэты аслабляе нас. Я хачу, каб гэтая кніга абудзіла ў~вас прагу, волю да жыцьця, да здароўя на самым глыбінным узроўні. Няхай інстынкт жыцьця дапаможа вам ня толькі займець аптымальнае здароўе, але й рэалізаваць свой патэнцыял як асобы, дамагчыся сваіх мэтаў, стаць больш моцнымі і цягавітымі як фізычна, так і разумова.
 
 
-\subsection{Здароўе~--- гэта нашмат больш, чым адсутнасьць хваробаў}
+\subsection*{Здароўе~--- гэта нашмат больш, чым адсутнасьць хваробаў}
 
 З гэтай кнігі вы даведаецеся, як здароўе робіцца падмуркам даўгалецьця, прывабнасьці й шчасьця. Мы разьбяром сем ключавых рэсурсаў здароўя, асяродзьдзе, спосабы вымярэньня і ацэнкі здароўя, практычныя падыходы прымяненьня рэкамэндацый у~сваім жыцьці на сыстэмнай аснове. Бо наша здароўе~--- гэта як хата, дзе нельга абраць, што важнейшае~--- падлога, сьцены, вокны або дах. Важнае ўсё.
 
@@ -30,6 +30,6 @@
 Прыемнага і плённага чытва!
 
 
-\subsection{Падзякі}
+\subsection*{Падзякі}
 
 Асаблівая падзяка жонцы Кацярыне за стварэньне ўмоваў для напісаньня кнігі. Дзякую маці Надзеі Белавешкінай за падтрымку ў~час пісьма. Рэдактарка Яна Жукава дапамагла мне разабрацца з~рукапісам і зрабіць тэкст і думкі больш яснымі. Дзякую за дапамогу ў~стварэньні ілюстрацый дызайнэрцы Галіне Пуларыі ды ілюстратарцы Кацярыне Вельчавай. За каштоўныя парады і заўвагі наконт кнігі ўдзячны Аляксею Маскалёву, Надзеі Крыжаноўскай, Дзьмітрыю Курылу, Мікалаю Белавешкіну, Алене Рыдэль. Таксама дзякуй усім маім настаўнікам, пацыентам, кліентам, чытачам блога, вучням і выпускнікам маёй Школы здароўя за пытаньні, натхненьне, якія і прывялі да стварэньня гэтай кнігі.
